--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.67MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.28MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-4.34MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.10MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.09MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 172.99.188.71, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇯🇵 日本-2.35MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.32MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.13MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林) 2, server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.32MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.67MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.75MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
