--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-245.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-554.2KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇳 中国-2.98MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.13MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-3.93MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.94MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-264.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.31MB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇭🇰 香港-3.68MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-203.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.38MB/s(Youtube:不良林), server: 38.68.134.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-3.12MB/s(Youtube:不良林), server: 192.74.242.182, port: 443, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/170419111021, ws-headers: {Host: 192.74.242.182}}
   - {name: 🇺🇸 美国-2.42MB/s(Youtube:不良林), server: 45.35.84.162, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 45.35.84.162}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-245.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-245.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-245.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-245.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-245.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-245.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-245.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-554.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
