--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-157.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.01MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.98MB/s(Youtube:不良林), server: hinet.52147.top, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-264.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-150.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: 38.75.136.102, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇫🇷 法国-1.04MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇨🇳 中国-2.56MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.65MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.90MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.26MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.75MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-157.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-157.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,35 +52,34 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-157.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.98MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-157.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-157.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-157.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-157.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-264.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.56MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
 rules:
